RESOLVED - bug 261: Comprobar la modificacion externa de los ficheros de dominios http://bugzilla.code.es/show_bug.cgi?id=261 RESOLVED - bug 351: Añadir Dominios y usuarios por lotes http://bugzilla.code.es/show_bug.cgi?id=351